fix(github-jobs): align search input correctly

--- a/apps/github-jobs/src/components/SearchForm.scss
+++ b/apps/github-jobs/src/components/SearchForm.scss
@@ -22,6 +22,10 @@
     outline: 2px solid var(--primary);
   }
 
+  .label {
+    justify-content: center;
+  }
+
   --button-padding: 14px 48px;
   --button-radius: 4px;
   --button-font-size: 1rem;
